game logic done

--- a/index.html
+++ b/index.html
@@ -10,7 +10,41 @@
 </head>
 
 <body>
-  Score
+
+  <header>
+    <div class="name">
+      <h1>Rock</h1>
+      <h1>Paper</h1>
+      <h1>Scissors</h1>
+    </div>
+    <div class="result-box">
+      <p>SCORE</p>
+      <h1 id="score">12</h1>
+    </div>
+  </header>
+
+  <main>
+    <section class="game-area">
+      <div id="player" style="display: none;">
+
+      </div>
+      <h1 id="finalText" style="color: white;"></h1>
+      <div id="computer" style="display: none;">
+
+      </div>
+      <div class="paper">
+        <img src="images/icon-paper.svg" alt="paper">
+      </div>
+      <div class="scissors">
+        <img src="images/icon-scissors.svg" alt="scissors">
+      </div>
+      <div class="rock">
+        <img src="images/icon-rock.svg" alt="rock">
+      </div>
+    </section>
+  </main>
+
+  <!-- Score
   Rules
 
   You Picked
@@ -19,8 +53,15 @@
   You Win
   You Lose
 
-  Play Again
+  Play Again -->
 
+  <!-- <div class="container">
+    <img class="rock" src="images/icon-rock.svg" alt="rock">
+    <img class="paper" src="images/icon-paper.svg" alt="paper">
+    <img class="scissor" src="images/icon-scissors.svg" alt="scissor">
+  </div> -->
+
+  <script src="app/js/app.js"></script>
 </body>
 
 </html>
